# Static-Win

./: CMakeLists.txt
.github/workflows/: build-windows.yml
